--- a/package.json
+++ b/package.json
@@ -2,21 +2,28 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@notionhq/client": "0.2.0",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "express": "4.17.1",
     "history": "^4.10.1",
+    "nanoid": "3.1.23",
+    "pg": "8.6.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-autosize-textarea": "7.1.0",
     "react-dom": "^17.0.2",
+    "react-dotenv": "0.1.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reselect": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
     "eslint": "eslint --ext .jsx --ext .js src/",
