--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@notionhq/client": "0.2.0",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "axios-throttle": "1.0.2",
     "express": "4.17.1",
     "history": "^4.10.1",
     "nanoid": "3.1.23",
