--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "dependencies": {
     "@notionhq/client": "0.2.0",
     "@reduxjs/toolkit": "^1.5.0",
+    "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "axios": "^0.21.1",
     "axios-throttle": "1.0.2",
+    "eslint-config-airbnb": "^18.2.1",
     "express": "4.17.1",
     "history": "^4.10.1",
     "nanoid": "3.1.23",
@@ -28,7 +32,11 @@
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
     "eslint": "eslint --ext .jsx --ext .js src/",
-    "test:eslint": "npm run eslint"
+    "test:eslint": "npm run eslint",
+    "lint": "npm run typescript && npm run lint:ts",
+    "lint:ts": "eslint './src/**/*.{ts,tsx}'",
+    "prettier:ts": "prettier-eslint --list-different $PWD/'src/**/*.{ts,tsx}'; prettier-eslint --write $PWD/'src/**/*.{ts,tsx}'",
+    "typescript": "tsc"
   },
   "eslintConfig": {
     "extends": [
@@ -54,9 +62,18 @@
     "@testing-library/react": "^11.2.0",
     "@testing-library/react-hooks": "^5.1.0",
     "@testing-library/user-event": "^12.8.0",
+    "@types/react": "17.0.16",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "5.1.8",
+    "@types/react-test-renderer": "17.0.1",
     "axios-mock-adapter": "^1.19.0",
     "eslint-config-htmlacademy": "^4.0.1",
+    "prettier-eslint-cli": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "ts-jest": "27.0.4",
+    "ts-loader": "9.2.5",
+    "typescript": "4.3.5",
+    "utility-types": "3.10.0"
   }
 }
