--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "@notionhq/client": "0.2.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/jest": "^26.0.24",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
     "axios": "^0.21.1",
     "axios-throttle": "1.0.2",
     "eslint-config-airbnb": "^18.2.1",
@@ -68,6 +66,7 @@
     "@types/react-test-renderer": "17.0.1",
     "axios-mock-adapter": "^1.19.0",
     "eslint-config-htmlacademy": "^4.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "prettier-eslint-cli": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
