--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "2.13.9",
     "reselect": "^4.0.0"
   },
   "scripts": {
@@ -67,8 +68,8 @@
     "axios-mock-adapter": "^1.19.0",
     "eslint-config-htmlacademy": "^4.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.0",
     "prettier-eslint-cli": "^5.0.1",
-    "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
     "ts-jest": "27.0.4",
     "ts-loader": "9.2.5",
