--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "5.1.8",
     "@types/react-test-renderer": "17.0.1",
+    "@typescript-eslint/parser": "^4.29.0",
     "axios-mock-adapter": "^1.19.0",
     "eslint-config-htmlacademy": "^4.0.1",
     "eslint-config-prettier": "^8.3.0",
