--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@notionhq/client": "0.2.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/jest": "^26.0.24",
+    "apollo-boost": "^0.4.9",
     "axios": "^0.21.1",
     "axios-throttle": "1.0.2",
     "eslint-config-airbnb": "^18.2.1",
     "express": "4.17.1",
+    "graphql": "^15.5.1",
     "history": "^4.10.1",
     "nanoid": "3.1.23",
     "pg": "8.6.0",
