--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "express": "4.17.1",
     "graphql": "^15.5.1",
+    "graphql.macro": "^1.4.2",
     "history": "^4.10.1",
     "nanoid": "3.1.23",
     "pg": "8.6.0",
