--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,8 @@
         ".tsx"
       ]
     }],
+    "react/react-in-jsx-scope": 0,
+    "react/prop-types": 0,
     "react/jsx-props-no-spreading": 0,
     "import/prefer-default-export": 0,
     "import/extensions": [1, "ignorePackages", {
