--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "project",
+  "name": "rick-and-morty",
   "version": "0.1.0",
+  "homepage": "http://levallevchenko.github.io/Rick-and-Morty",
   "private": true,
   "type": "module",
   "dependencies": {
@@ -32,6 +33,8 @@
   "scripts": {
     "start": "react-dotenv && react-scripts start",
     "build": "react-dotenv && react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
     "eslint": "eslint --ext .jsx --ext .js src/",
@@ -75,6 +78,7 @@
     "eslint-config-htmlacademy": "^4.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.0",
+    "gh-pages": "^4.0.0",
     "prettier-eslint-cli": "^5.0.1",
     "redux-mock-store": "^1.5.4",
     "ts-jest": "27.0.4",
